# pokemon_filter

./: Cargo.toml  CompletePokemon.csv  Dioxus.toml  README.md
assets/styling/: main.css
convert/: main.rs
src/: lib.rs  main.rs  pokemon.rs
src/components/: echo.rs
