[package]
name = "pokemon_filter"
version = "0.1.0"
authors = ["Marshall-Bell <marshallbell53@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0"  # Make sure to use v2.0
anyhow = "1.0.98"
csv = "1.3.1"
dioxus-fullstack = "0.6.3"  # Add this dependency

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pokemon_filter"
path = "src/main.rs"

[[bin]]
name = "convert"
path = "convert/main.rs"
